--- a/packages/translation/src/lang/es.json
+++ b/packages/translation/src/lang/es.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Este campo no es válido",
-                "required": "Este campo es obligatorio"
+                "required": "Este campo es obligatorio",
+                "string": {
+                    "startsWith": "Este campo debe empezar con {startsWith}",
+                    "endsWith": "Este campo debe terminar con {endsWith}",
+                    "includes": "Este campo debe incluir {includes}"
+                },
+                "tooSmall": {
+                    "string": "Este campo debe tener al menos {minimum} caracteres",
+                    "number": "Este campo debe ser mayor o igual a {minimum}"
+                },
+                "tooBig": {
+                    "string": "Este campo debe tener como máximo {maximum} caracteres",
+                    "number": "Este campo debe ser menor o igual a {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Texto resaltado en color",
                 "code": "Código",
                 "clear": "Borrar formato",
+                "heading": "Encabezado {level}",
+                "align": "Alinear texto: {position}",
                 "blockquote": "Cita",
                 "horizontalLine": "Línea horizontal",
                 "bulletList": "Lista sin ordenar",
@@ -399,6 +414,7 @@
                 "search": "Buscar",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Desconocido"
                     }
