--- a/packages/translation/src/lang/he.json
+++ b/packages/translation/src/lang/he.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "שדה זה אינו חוקי",
-                "required": "זהו שדה חובה"
+                "required": "זהו שדה חובה",
+                "string": {
+                    "startsWith": "שדה זה חייב להתחיל עם {startsWith}",
+                    "endsWith": "שדה זה חייב להסתיים עם {endsWith}",
+                    "includes": "שדה זה חייב להכיל {includes}"
+                },
+                "tooSmall": {
+                    "string": "שדה זה חייב להיות באורך של {minimum} תווים לפחות",
+                    "number": "שדה זה חייב להיות גדול או שווה ל {minimum}"
+                },
+                "tooBig": {
+                    "string": "שדה זה חייב להיות באורך של {maximum} תווים לכל היותר",
+                    "number": "שדה זה חייב להיות קטן או שווה ל {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "טקסט סימון צבעוני",
                 "code": "קוד",
                 "clear": "נקה עיצוב",
+                "heading": "כותרת {level}",
+                "align": "יישור טקסט: {position}",
                 "blockquote": "ציטוט",
                 "horizontalLine": "קו אופקי",
                 "bulletList": "רשימת תבליט",
@@ -399,6 +414,7 @@
                 "search": "חיפוש",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "לא ידוע"
                     }
