--- a/packages/translation/src/lang/ro.json
+++ b/packages/translation/src/lang/ro.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Acest câmp nu este valid",
-                "required": "Acest câmp este obligatoriu"
+                "required": "Acest câmp este obligatoriu",
+                "string": {
+                    "startsWith": "Acest câmp trebuie să înceapă cu {startsWith}",
+                    "endsWith": "Acest câmp trebuie să se termine cu {endsWith}",
+                    "includes": "Acest câmp trebuie să includă {includes}"
+                },
+                "tooSmall": {
+                    "string": "Acest câmp trebuie să aibă cel puțin {minimum} caractere",
+                    "number": "Acest câmp trebuie să fie mai mare sau egal cu {minimum}"
+                },
+                "tooBig": {
+                    "string": "Acest câmp trebuie să aibă cel mult {maximum} caractere",
+                    "number": "Acest câmp trebuie să fie mai mic sau egal cu {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Text colorat pentru evidențiere",
                 "code": "Cod",
                 "clear": "Curăță formatul",
+                "heading": "Rubrica {level}",
+                "align": "Așezați textul: {position}",
                 "blockquote": "Citat",
                 "horizontalLine": "Linie orizontală",
                 "bulletList": "Listă cu puncte",
@@ -399,6 +414,7 @@
                 "search": "Caută",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Necunoscut"
                     }
