--- a/packages/translation/src/lang/tr.json
+++ b/packages/translation/src/lang/tr.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Bu alan geçersiz",
-                "required": "Bu alan gereklidir"
+                "required": "Bu alan gereklidir",
+                "string": {
+                    "startsWith": "Bu alan {startsWith} ile başlamalıdır",
+                    "endsWith": "Bu alan {endsWith} ile bitmelidir",
+                    "includes": "Bu alan {includes} adresini içermelidir"
+                },
+                "tooSmall": {
+                    "string": "Bu alan en az {minimum} karakter uzunluğunda olmalıdır",
+                    "number": "Bu alan {minimum} adresinden uzun veya eşit olmalıdır"
+                },
+                "tooBig": {
+                    "string": "Bu alan en fazla {maximum} karakter uzunluğunda olmalıdır",
+                    "number": "Bu alan {maximum} adresinden kısa veya eşit olmalıdır"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Renkli vurgulu metin",
                 "code": "Kod",
                 "clear": "Biçimlendirmeyi temizle",
+                "heading": "Başlık {level}",
+                "align": "Metin hizalama: {position}",
                 "blockquote": "Blok alıntı",
                 "horizontalLine": "Yatay çizgi",
                 "bulletList": "Maddeli liste",
@@ -399,6 +414,7 @@
                 "search": "Ara",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Bilinmeyen"
                     }
