--- a/packages/translation/src/lang/vi.json
+++ b/packages/translation/src/lang/vi.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Trường này không hợp lệ",
-                "required": "Trường này là bắt buộc"
+                "required": "Trường này là bắt buộc",
+                "string": {
+                    "startsWith": "Trường này phải bắt đầu bằng {startsWith}",
+                    "endsWith": "Trường này phải kết thúc bằng {endsWith}",
+                    "includes": "Trường này phải bao gồm {includes}"
+                },
+                "tooSmall": {
+                    "string": "Trường này phải dài ít nhất {minimum} ký tự",
+                    "number": "Trường này phải lớn hơn hoặc bằng {minimum}"
+                },
+                "tooBig": {
+                    "string": "Trường này phải dài tối đa {maximum} ký tự",
+                    "number": "Trường này phải nhỏ hơn hoặc bằng {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Màu đánh dấu",
                 "code": "Mã",
                 "clear": "Xóa định dạng",
+                "heading": "Tiêu đề {level}",
+                "align": "Căn chỉnh: {position}",
                 "blockquote": "Trích dẫn",
                 "horizontalLine": "Kẻ ngang",
                 "bulletList": "Danh sách kiểu ký hiệu",
@@ -399,6 +414,7 @@
                 "search": "Tìm kiếm",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Không rõ"
                     }
