--- a/packages/translation/src/lang/de.json
+++ b/packages/translation/src/lang/de.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Dieses Feld ist ungültig",
-                "required": "Dieses Feld ist erforderlich"
+                "required": "Dieses Feld ist erforderlich",
+                "string": {
+                    "startsWith": "Dieses Feld muss mit {startsWith} beginnen",
+                    "endsWith": "Dieses Feld muss mit {endsWith} enden",
+                    "includes": "Dieses Feld muss {includes} beinhalten"
+                },
+                "tooSmall": {
+                    "string": "Dieses Feld muss mindestens {minimum} Zeichen lang sein",
+                    "number": "Dieses Feld muss größer oder gleich {minimum} sein"
+                },
+                "tooBig": {
+                    "string": "Dieses Feld muss mindestens {maximum} Zeichen lang sein",
+                    "number": "Dieses Feld muss größer oder gleich {maximum} sein"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Farbig hervorgehobener Text",
                 "code": "Code",
                 "clear": "Formatierung entfernen",
+                "heading": "Überschrift {level}",
+                "align": "Text ausrichten: {position}",
                 "blockquote": "Blockzitat",
                 "horizontalLine": "Horizontale Linie",
                 "bulletList": "Aufzählung",
@@ -399,6 +414,7 @@
                 "search": "Suchen",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Unbekannt"
                     }
