--- a/packages/translation/src/lang/el.json
+++ b/packages/translation/src/lang/el.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Το πεδίο δεν είναι έγκυρο",
-                "required": "Αυτό το πεδίο είναι υποχρεωτικό"
+                "required": "Αυτό το πεδίο είναι υποχρεωτικό",
+                "string": {
+                    "startsWith": "Αυτό το πεδίο πρέπει να ξεκινά με {startsWith}",
+                    "endsWith": "Το πεδίο αυτό πρέπει να τελειώνει με {endsWith}",
+                    "includes": "Το πεδίο αυτό πρέπει να περιλαμβάνει το {includes}"
+                },
+                "tooSmall": {
+                    "string": "Το πεδίο αυτό πρέπει να έχει μήκος τουλάχιστον {minimum} χαρακτήρες",
+                    "number": "Το πεδίο αυτό πρέπει να είναι μεγαλύτερο ή ίσο του {minimum}"
+                },
+                "tooBig": {
+                    "string": "Το πεδίο αυτό πρέπει να έχει μήκος το πολύ {maximum} χαρακτήρες",
+                    "number": "Το πεδίο αυτό πρέπει να είναι μικρότερο ή ίσο του {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Έγχρωμο κείμενο επισήμανσης",
                 "code": "Κωδικός",
                 "clear": "Εκκαθάριση μορφοποίησης",
+                "heading": "Επικεφαλίδα {level}",
+                "align": "Στοίχιση κειμένου: {position}",
                 "blockquote": "Μπλοκ κειμένου παράθεσης",
                 "horizontalLine": "Οριζόντια γραμμή",
                 "bulletList": "Λίστα με κουκκίδες",
@@ -399,6 +414,7 @@
                 "search": "Αναζήτηση",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Άγνωστο"
                     }
