--- a/packages/translation/src/lang/hu.json
+++ b/packages/translation/src/lang/hu.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Ez a mező érvénytelen",
-                "required": "Ez a mező kötelező"
+                "required": "Ez a mező kötelező",
+                "string": {
+                    "startsWith": "Ennek a mezőnek a {startsWith} kell kezdődnie",
+                    "endsWith": "Ennek a mezőnek a {endsWith} kell végződnie",
+                    "includes": "Ennek a mezőnek tartalmaznia kell a {includes} értéket"
+                },
+                "tooSmall": {
+                    "string": "Ennek a mezőnek legalább {minimum} karakter hosszúságúnak kell lennie",
+                    "number": "Ennek a mezőnek nagyobbnak vagy egyenlőnek kell lennie a {minimum} értékkel"
+                },
+                "tooBig": {
+                    "string": "Ez a mező legfeljebb {maximum} karakter hosszúságú lehet",
+                    "number": "Ennek a mezőnek kisebbnek vagy egyenlőnek kell lennie a {maximum} értékkel"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Színesen kiemelt szöveg",
                 "code": "Kód",
                 "clear": "Formázás törlése",
+                "heading": "Címsor {level}",
+                "align": "Szöveg igazítása: {position}",
                 "blockquote": "Idézet",
                 "horizontalLine": "Vízszintes vonal",
                 "bulletList": "Lista",
@@ -399,6 +414,7 @@
                 "search": "Keresés",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Ismeretlen"
                     }
