--- a/packages/translation/src/lang/pl.json
+++ b/packages/translation/src/lang/pl.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "To pole jest nieprawidłowe",
-                "required": "To pole jest wymagane"
+                "required": "To pole jest wymagane",
+                "string": {
+                    "startsWith": "To pole musi zaczynać się od {startsWith}",
+                    "endsWith": "To pole musi kończyć się na {endsWith}",
+                    "includes": "Pole to musi zawierać {includes}"
+                },
+                "tooSmall": {
+                    "string": "To pole musi mieć co najmniej {minimum} znaków",
+                    "number": "Wartość tego pola musi być większa lub równa {minimum}"
+                },
+                "tooBig": {
+                    "string": "To pole może zawierać maksymalnie {maximum} znaków",
+                    "number": "Wartość tego pola musi być mniejsza lub równa {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Kolorowy wyróżniony tekst",
                 "code": "Kod",
                 "clear": "Wyczyść formatowanie",
+                "heading": "Nagłówek {level}",
+                "align": "Wyrównanie tekstu: {position}",
                 "blockquote": "Cytat",
                 "horizontalLine": "Linia pozioma",
                 "bulletList": "Lista punktowana",
@@ -399,6 +414,7 @@
                 "search": "Szukaj",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Nieznany"
                     }
