--- a/packages/translation/src/lang/ru.json
+++ b/packages/translation/src/lang/ru.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Данное поле недействительно",
-                "required": "Это поле обязательно"
+                "required": "Это поле обязательно",
+                "string": {
+                    "startsWith": "Значение данного поля должно начинаться с {startsWith}",
+                    "endsWith": "Значение данного поля должно заканчиваться на {endsWith}",
+                    "includes": "Значение данного поля должно включать {includes}"
+                },
+                "tooSmall": {
+                    "string": "Данное поле должно содержать не менее {minimum} символов",
+                    "number": "Значение данного поля должно быть больше или равно {minimum}"
+                },
+                "tooBig": {
+                    "string": "Данное поле должно содержать не более {maximum} символов",
+                    "number": "Значение этого поля должно быть меньше или равно {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "Выделение текста цветом",
                 "code": "Код",
                 "clear": "Очистить форматирование",
+                "heading": "Заголовок {level}",
+                "align": "Выровнять текст: {position}",
                 "blockquote": "Цитата",
                 "horizontalLine": "Горизонтальная линия",
                 "bulletList": "Маркированный список",
@@ -399,6 +414,7 @@
                 "search": "Поиск",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Неизвестно"
                     }
