--- a/packages/translation/src/lang/tw.json
+++ b/packages/translation/src/lang/tw.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "該字段無效",
-                "required": "此字段為必填"
+                "required": "此字段為必填",
+                "string": {
+                    "startsWith": "該字段必須以 {startsWith} 開頭",
+                    "endsWith": "該字段必須以 {endsWith} 結尾",
+                    "includes": "該字段必須以 {includes}"
+                },
+                "tooSmall": {
+                    "string": "該字段長度必須至少為 {minimum} 個字符",
+                    "number": "該字段必須大於或等於 {minimum}"
+                },
+                "tooBig": {
+                    "string": "該字段長度不得超過 {maximum} 個字符",
+                    "number": "該字段必須小於或等於 {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "高亮文字",
                 "code": "代碼",
                 "clear": "清除格式",
+                "heading": "標題 {level}",
+                "align": "對齊文字: {position}",
                 "blockquote": "引用",
                 "horizontalLine": "橫線",
                 "bulletList": "符號列表",
@@ -399,6 +414,7 @@
                 "search": "搜尋",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "未知"
                     }
