--- a/packages/translation/src/lang/uk.json
+++ b/packages/translation/src/lang/uk.json
@@ -126,7 +126,20 @@
         "zod": {
             "errors": {
                 "default": "Це поле є недійсним",
-                "required": "Це поле обов'язкове для заповнення"
+                "required": "Це поле обов'язкове для заповнення",
+                "string": {
+                    "startsWith": "Це поле повинно починатися з {startsWith}",
+                    "endsWith": "Це поле повинно закінчуватися на {endsWith}",
+                    "includes": "Це поле повинно містити {includes}"
+                },
+                "tooSmall": {
+                    "string": "Це поле повинно мати довжину не менше {minimum} символів",
+                    "number": "Це поле повинно бути більше або дорівнювати {minimum}"
+                },
+                "tooBig": {
+                    "string": "Це поле має містити не більше {maximum} символів",
+                    "number": "Це поле повинно бути менше або дорівнювати {maximum}"
+                }
             }
         }
     },
@@ -246,6 +259,8 @@
                 "colorHighlight": "",
                 "code": "",
                 "clear": "",
+                "heading": "",
+                "align": "",
                 "blockquote": "",
                 "horizontalLine": "",
                 "bulletList": "",
@@ -399,6 +414,7 @@
                 "search": "Пошук",
                 "table": {
                     "header": {},
+                    "action": {},
                     "population": {
                         "fallback": "Невідомо"
                     }
