feat: #1254 display group owner (#1406)
* feat: #1254 display group owner

* fix: format

* fix: format issue

---------

Co-authored-by: Meier Lukas <meierschlumpf@gmail.com>

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -1932,7 +1932,10 @@
         "back": "Back to groups",
         "setting": {
           "general": {
-            "title": "General"
+            "title": "General",
+            "owner": "Owner",
+            "ownerOfGroup": "Owner of this group",
+            "ownerOfGroupDeleted": "The owner of this group was deleted. It currently has no owner."
           },
           "members": {
             "title": "Members",
