feat: pr feedback

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2593,7 +2593,8 @@
           "noResults": {
             "title": "There aren't any search engines",
             "action": "Create your first search engine"
-          }
+          },
+          "interactive": "Interactive, uses an integration"
         },
         "create": {
           "title": "New search engine",
