--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2424,6 +2424,9 @@
               },
               "detail": {
                 "title": "Select an action for the search engine"
+              },
+              "searchResults": {
+                "title": "Select a search result for actions"
               }
             },
             "option": {
@@ -2620,6 +2623,11 @@
               "title": "Unable to apply changes",
               "message": "The search engine could not be saved"
             }
+          },
+          "configControl": "Configuration",
+          "searchEngineType": {
+            "generic": "Generic",
+            "fromIntegration": "From integration"
           }
         },
         "delete": {
