feat: #1047 add overseerr search (#1411)
Co-authored-by: Meier Lukas <meierschlumpf@gmail.com>

--- a/packages/translation/src/lang/en.json
+++ b/packages/translation/src/lang/en.json
@@ -2427,6 +2427,9 @@
               },
               "detail": {
                 "title": "Select an action for the search engine"
+              },
+              "searchResults": {
+                "title": "Select a search result for actions"
               }
             },
             "option": {
@@ -2596,7 +2599,8 @@
           "noResults": {
             "title": "There aren't any search engines",
             "action": "Create your first search engine"
-          }
+          },
+          "interactive": "Interactive, uses an integration"
         },
         "create": {
           "title": "New search engine",
@@ -2622,6 +2626,11 @@
               "title": "Unable to apply changes",
               "message": "The search engine could not be saved"
             }
+          },
+          "configControl": "Configuration",
+          "searchEngineType": {
+            "generic": "Generic",
+            "fromIntegration": "From integration"
           }
         },
         "delete": {
